# ableton-mcp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: fix-code-style.yml  lint.yml  tests.yml
AbletonMCP_Remote_Script/: __init__.py
MCP_Server/: __init__.py
remote_script/: __init__.py
skills/ableton/: SKILL.md
src/ableton_ai/: server.py
src/ableton_ai/tools/: arrangement.py  automation.py  clips.py  devices.py  notes.py  session.py  tracks.py
src/ableton_mcp/: __init__.py  config.py  connection.py  exceptions.py  install.py  server.py
src/ableton_mcp/tools/: __init__.py  _base.py  arrangement.py  automation.py  browser.py  clips.py  devices.py  music.py  notes.py  session.py  tracks.py
tests/: conftest.py
tests/integration/: test_workflows.py
tests/unit/: test_connection.py  test_error_handling.py  test_install.py  test_remote_script_dispatch.py  test_rest_api_complete.py  test_security.py  test_tools.py  test_validation.py
