[project]
name = "ableton-mcp"
version = "2.1.0"
description = "Control Ableton Live from an AI assistant via MCP. Fork of jpoindexter/ableton-mcp (itself a fork of ahujasid/ableton-mcp), adding per-note probability, rack-internals access, and crash fixes."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Siddharth Ahuja", email = "ahujasid@gmail.com" },
    { name = "Jason Poindexter", email = "jason@theft.studio" },
    { name = "Freek Van der Herten", email = "freek@spatie.be" },
]
maintainers = [{ name = "Freek Van der Herten", email = "freek@spatie.be" }]
license = { text = "MIT" }
keywords = ["ableton", "music", "production", "ai", "mcp", "claude", "midi", "daw", "live"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Typing :: Typed",
]
dependencies = ["mcp[cli]>=1.3.0"]

[project.optional-dependencies]
rest = ["fastapi>=0.100.0", "uvicorn>=0.22.0", "pydantic>=2.0.0", "requests>=2.28.0"]
all = ["ableton-mcp[rest]"]

[project.scripts]
ableton-mcp = "ableton_mcp.server:main"

[project.urls]
Homepage = "https://github.com/freekmurze/ableton-mcp"
Documentation = "https://github.com/freekmurze/ableton-mcp#readme"
"Bug Tracker" = "https://github.com/freekmurze/ableton-mcp/issues"
Changelog = "https://github.com/freekmurze/ableton-mcp/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ableton_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "fastapi>=0.100.0",
    "httpx>=0.27",
    "requests>=2.28.0",
]

# ---------------------------------------------------------------- ruff
# ruff is formatter, linter and autofixer in one. The Pint of this stack,
# except it also covers a lot of what you'd reach for a sniff ruleset for.
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
# The remote script runs inside Ableton's embedded Python. It cannot import
# anything third-party and its style is constrained by that, so it is excluded.
extend-exclude = ["AbletonMCP_Remote_Script"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "B",         # bugbear
    "A",         # builtin shadowing
    "C4",        # comprehensions
    "SIM",       # simplify
    "RET",       # returns
    "PTH",       # pathlib over os.path
    "RUF",       # ruff-specific
    "TID",       # tidy imports
    "PIE",
    "T20",       # no stray print() in library code
]
ignore = [
    "E501",  # line length is the formatter's problem
    "B008",  # Depends() in a default is idiomatic FastAPI
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]

[tool.ruff.lint.isort]
known-first-party = ["ableton_mcp"]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------- mypy
# The PHPStan of this stack. Strict on our code, lenient at the edges where
# third-party packages ship no stubs.
[tool.mypy]
python_version = "3.10"
files = ["src"]
strict = true
warn_unreachable = true
pretty = true
exclude = ["AbletonMCP_Remote_Script"]

[[tool.mypy.overrides]]
module = ["mcp.*", "fastapi.*", "uvicorn.*", "starlette.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------- pytest
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config"
markers = [
    "integration: needs a running Ableton (deselect with -m 'not integration')",
]

[tool.coverage.run]
source = ["src/ableton_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
